--- a/client/views/model.html
+++ b/client/views/model.html
@@ -34,14 +34,30 @@
 				<div class="form-group row">
 					<label class="col-sm-3 col-form-label">Process</label>
 					<div class="col-sm-9">
-						<select class="form-control" ng-model="train.process_name" ng-options="p for p in process_names"></select>
+						<select class="form-control" ng-model="train.process_name" ng-options="p for p in process_names" ng-change="update_columns(process_columns, train.process_name, args.merge_process)"></select>
+					</div>
+				</div>
+
+				<div class="form-group row">
+					<label class="col-sm-3 col-form-label">Join Process</label>
+					<div class="col-sm-9">
+						<select class="form-control" ng-model="args.merge_process" ng-options="p for p in process_names" ng-change="update_columns(process_columns, train.process_name, args.merge_process)">
+							<option></option>
+						</select>
+					</div>
+				</div>
+
+				<div class="form-group row" ng-show="args.merge_process">
+					<label class="col-sm-3 col-form-label">Join On</label>
+					<div class="col-sm-9">
+						<select class="form-control" ng-model="args.merge_key" ng-options="p for p in merge_columns"></select>
 					</div>
 				</div>
 
 				<div class="form-group row" ng-show="train.process_name">
 					<label class="col-sm-3 col-form-label">Inputs</label>
 					<div class="col-sm-9">
-						<select class="form-control" ng-model="args.inputs" ng-options="p for p in process_columns[train.process_name]" multiple size="10"></select>
+						<select class="form-control" ng-model="args.inputs" ng-options="p for p in columns" multiple size="10"></select>
 					</div>
 				</div>
 
@@ -57,7 +73,7 @@
 				<div class="form-group row" ng-show="train.process_name">
 					<label class="col-sm-3 col-form-label">Output</label>
 					<div class="col-sm-9">
-						<select class="form-control" ng-model="args.output" ng-options="p for p in process_columns[train.process_name]"></select>
+						<select class="form-control" ng-model="args.output" ng-options="p for p in columns"></select>
 					</div>
 				</div>
 
