--- a/client/views/model.html
+++ b/client/views/model.html
@@ -62,27 +62,9 @@
 				</div>
 
 				<div class="form-group row" ng-show="train.process">
-					<label class="col-sm-3 col-form-label">Input Transform</label>
+					<label class="col-sm-3 col-form-label">Target</label>
 					<div class="col-sm-9">
-						<select class="form-control" ng-model="args.input_transform" ng-options="v for v in ['maxabs', 'minmax', 'standard']">
-							<option></option>
-						</select>
-					</div>
-				</div>
-
-				<div class="form-group row" ng-show="train.process">
-					<label class="col-sm-3 col-form-label">Output</label>
-					<div class="col-sm-9">
-						<select class="form-control" ng-model="args.output" ng-options="p for p in columns"></select>
-					</div>
-				</div>
-
-				<div class="form-group row" ng-show="train.process">
-					<label class="col-sm-3 col-form-label">Output Transform</label>
-					<div class="col-sm-9">
-						<select class="form-control" ng-model="args.output_transform" ng-options="v for v in ['log2']">
-							<option></option>
-						</select>
+						<select class="form-control" ng-model="args.target" ng-options="p for p in columns"></select>
 					</div>
 				</div>
 
@@ -90,6 +72,15 @@
 					<label class="col-sm-3 col-form-label">Selectors</label>
 					<div class="col-sm-9">
 						<input class="form-control" ng-model="args.selectors"/>
+					</div>
+				</div>
+
+				<div class="form-group row" ng-show="train.process">
+					<label class="col-sm-3 col-form-label">Scaler</label>
+					<div class="col-sm-9">
+						<select class="form-control" ng-model="args.scaler" ng-options="v for v in ['maxabs', 'minmax', 'standard']">
+							<option></option>
+						</select>
 					</div>
 				</div>
 
@@ -121,9 +112,16 @@
 
 			<div class="card-body">
 				<div class="form-group row">
-					<label class="col-sm-3 col-form-label">MAPE</label>
+					<label class="col-sm-3 col-form-label">Prediction Error</label>
 					<div class="col-sm-9">
-						<p class="form-control-plaintext">{{train.results.mape | number:3}} %</p>
+						<p class="form-control-plaintext">{{train.results.mpe | number:3}} %</p>
+					</div>
+				</div>
+
+				<div class="form-group row">
+					<label class="col-sm-3 col-form-label">Coverage</label>
+					<div class="col-sm-9">
+						<p class="form-control-plaintext">{{train.results.cov | number:3}} %</p>
 					</div>
 				</div>
 			</div>
@@ -144,26 +142,33 @@
 					</div>
 				</div>
 
+				<div class="form-group row" ng-show="predict.process">
+					<label class="col-sm-3 col-form-label">Target</label>
+					<div class="col-sm-9">
+						<select class="form-control" ng-model="predict.target" ng-options="p for p in columns"></select>
+					</div>
+				</div>
+
 				<div class="text-center">
-					<button type="button" class="btn btn-outline-dark" ng-click="get_config(pipeline, predict.process)">
+					<button type="button" class="btn btn-outline-dark" ng-click="get_config(pipeline, predict.process, predict.target)">
 						<span>Get Config</span>
 					</button>
 				</div>
 			</form>
 
 			<form class="card-body" name="form-predict">
-				<div class="form-group row" ng-repeat="input in predict.inputs">
-					<label class="col-sm-3 col-form-label">{{input.name}}</label>
-					<div class="col-sm-9" ng-show="input.categories">
-						<select class="form-control" ng-model="input.value" ng-options="v for v in input.categories"></select>
+				<div class="form-group row" ng-repeat="(key, options) in predict.options">
+					<label class="col-sm-3 col-form-label">{{key}}</label>
+					<div class="col-sm-9" ng-show="options">
+						<select class="form-control" ng-model="predict.inputs[key]" ng-options="v for v in options"></select>
 					</div>
-					<div class="col-sm-9" ng-hide="input.categories">
-						<input class="form-control" ng-model="input.value"/>
+					<div class="col-sm-9" ng-hide="options">
+						<input class="form-control" ng-model="predict.inputs[key]"/>
 					</div>
 				</div>
 
 				<div class="text-center">
-					<button type="button" class="btn btn-outline-dark" ng-disabled="predicting" ng-click="!predicting && predict(pipeline, predict.process, predict.inputs)">
+					<button type="button" class="btn btn-outline-dark" ng-disabled="predicting" ng-click="!predicting && predict(pipeline, predict.process, predict.target, predict.inputs)">
 						<span ng-show="predicting" class="spinner-border spinner-border-sm"></span>
 						<span ng-show="!predicting">Predict</span>
 					</button>
