--- a/client/views/task.html
+++ b/client/views/task.html
@@ -13,7 +13,7 @@
 
 			<div class="card-body">
 				<div class="text-center">
-					<button type="button" class="btn btn-outline-dark" ng-click="fetchLog()">Show Logs</button>
+					<button type="button" class="btn btn-outline-dark" ng-click="fetchLog()">Fetch Logs</button>
 				</div>
 
 				<hr>
